name:                satchsalvage
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Luke Tebbs
maintainer:          luke@amicum.co.uk
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable satchsalvage
  main-is:             Main.hs
  build-depends:       base >=4.9,
                       optparse-applicative,
                       mysql-simple,
                       bytestring,
                       io-streams,
                       unix,
                       filepath,
                       text
